# Arise.FileSyncer.DesktopApp

./: .editorconfig  .gitignore  Arise.FileSyncer.DesktopApp.sln  README.md  nuget.config  package.bat  package.nu
Arise.FileSyncer.ElectronUI/: build.lua  build.mjs  build.nu  package.bat  package.json  tsconfig.json  webpack.common.config.js  webpack.config.js  webpack.prod.config.js
Arise.FileSyncer.ElectronUI/src/: package.json
Arise.FileSyncer.ElectronUI/src/main/: application.ts  main.ts  shortcuts.ts
Arise.FileSyncer.ElectronUI/src/main/ipc/: ipcConnection.ts  ipcService.ts  messages.ts
Arise.FileSyncer.ElectronUI/src/renderer/: index.ts
Arise.FileSyncer.ElectronUI/src/renderer/app-data/: app-data-updater.ts  app-data-vars.ts  app-data.ts  extensions.ts  interfaces.ts
Arise.FileSyncer.ElectronUI/src/shared/: shared-array.ts  shared-data.ts  shared-dictionary.ts  shared.ts  typed-event.ts
Arise.FileSyncer.ElectronUI/src/static/: index.html
Arise.FileSyncer.Service/: Arise.FileSyncer.Service.csproj  DesktopLogger.cs  DiscoveryTimer.cs  Program.cs  SyncerService.cs  build.nu  package.bat
Arise.FileSyncer.Service/Ipc/: IpcController.cs  IpcMessage.cs
Arise.FileSyncer.Service/Ipc/DataModels/: ProfileData.cs
Arise.FileSyncer.Service/Ipc/Messages/: ConnectionAddedMessage.cs  ConnectionRemovedMessage.cs  ConnectionVerifiedMessage.cs  DeleteProfileMessage.cs  DeleteProfileResultMessage.cs  EditProfileMessage.cs  EditProfileMessageResult.cs  InitializationMessage.cs  NewProfileMessage.cs  NewProfileResultMessage.cs  ProfileAddedMessage.cs  ProfileChangedMessage.cs  ProfileRemovedMessage.cs  ReceivedProfileMessage.cs  ReceivedProfileResultMessage.cs  SendProfileMessage.cs  SetAllowPairingMessage.cs  UpdateMessage.cs  WelcomeMessage.cs
Arise.FileSyncer.Service/Properties/PublishProfiles/: Linux x64.pubxml  Linux-x64.pubxml  Windows x64.pubxml  Windows x86.pubxml  Windows-x64.pubxml  Windows-x86.pubxml
Arise.FileSyncer.TauriUI/: .eslintrc.js  index.html  package.json  vite.config.ts
Arise.FileSyncer.TauriUI/src/: fonts.css  index.css  main.tsx
Arise.FileSyncer.TauriUI/src-tauri/: Cargo.toml  tauri.conf.json
Arise.FileSyncer.TauriUI/src-tauri/src/: appstate.rs  main.rs  messages.rs  models.rs
Arise.FileSyncer.TauriUI/src-tauri/src/ipc/: mod.rs  receiver.rs  sender.rs
Arise.FileSyncer.TauriUI/src-tauri/src/ipc/comms/: mod.rs  traits.rs  util.rs
Arise.FileSyncer.TauriUI/src-tauri/src/ipc/comms/unix/: connection.rs  mod.rs  server.rs
Arise.FileSyncer.TauriUI/src-tauri/src/ipc/comms/windows/: client.rs  connection.rs  mod.rs  server.rs
Arise.FileSyncer.TauriUI/src/app-data/: app-data-updater.ts  app-data-vars.ts  app-data.ts  extensions.ts  interfaces.ts
Arise.FileSyncer.TauriUI/src/components/: button.css  button.tsx  checkbox.css  checkbox.tsx  editor.css  editor.tsx  page-title-bar.tsx  progressbar.css  progressbar.tsx
Arise.FileSyncer.TauriUI/src/ipc/: ipcEvents.ts  ipcMessage.ts  messages.ts
Arise.FileSyncer.TauriUI/src/main-app/: notification-manager.ts  page-controller.ts
Arise.FileSyncer.TauriUI/src/shared/: shared-array.ts  shared-data.ts  shared-dictionary.ts  shared.ts  typed-event.ts
Arise.FileSyncer.TauriUI/src/window/: activities.ts  activity-loader.ts  window-display.tsx
(+100 files in other folders)
