[package]
name = "afs-client-tauri"
version = "0.1.0"
description = "Arise FileSyncer Desktop App"
edition = "2021"
build = "src/build.rs"

[dependencies]
tauri = { version = "1.1.0", features = ["api-all"] }
serde = { version = "1.0.0", features = [ "derive" ] }
json = { package = "serde_json", version = "1.0.0" }
chrono = { version = "0.4.0", features = [ "serde" ] }
channel = { package = "crossbeam-channel", version = "0.5.0" }
thiserror = "1.0.0"
state = "0.5.0"
# IPC
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = "0.7.1"
async-trait = "0.1.53"
log = "0.4.0"

[build-dependencies]
tauri-build = { version = "1.1.0", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
